--- a/config.sample.json
+++ b/config.sample.json
@@ -10,7 +10,8 @@
 		"endpoints": {
 			"contracts": "v1/contracts",
 			"measures": "v1/amon_measures",
-			"community": "v1/community"
+			"community": "v1/community",
+			"tertiary": "/v1/tertiary_amon_measures"
 		},
 		"base_url_dev": "https://api-dev.beedataanalytics.com/",
 		"base_url": "https://api.beedataanalytics.com/",
